better filename for final product

--- a/templates/tab_5.html
+++ b/templates/tab_5.html
@@ -73,7 +73,7 @@
     <div id="options_if_not_selecting" style="display:none">
       <div class="input-group" style="margin: 1%">
         <span class="input-group-addon" id="basic-addon1">FULL PATH to directory with pre-extracted reporter ions</span>
-        <input type="text" class="form-control" id="mgfTxtReadDirPath" value="/Users/samlobel/Code/DAD/Lobel_GUI/DATA_TMT10test_SMALLER/TESTmgffiles10/ReportersSelected_Min2TMT10ions_MinIntensity1000_InitialMassError20ppm_RecalMassError5ppm">
+        <input type="text" class="form-control" id="mgfTxtReadDirPath">
         <span class="input-group-btn">
           <button class="btn btn-info" onclick="alert('On windows, open windows explorer and navigate to the folder that contains your mgf.txt files. Clicking on your url bar will highlight the directory path, copy paste that into this text box')">?</button>
         </span>
@@ -86,7 +86,7 @@
     <br>
     <div class="input-group" style="margin: 1%">
       <span class="input-group-addon" id="basic-addon1">FULL PATH to XML FILE YOU WANT TO PARSE</span>
-      <input type="text" class="form-control" id="xmlReadPath" value="/Users/samlobel/Code/DAD/Lobel_GUI/DATA_TMT10test_SMALLER/GPM22200021391.xml">
+      <input type="text" class="form-control" id="xmlReadPath">
       <span class="input-group-btn">
         <button class="btn btn-info" onclick="alert('On windows, open windows explorer and navigate to the directory where your xml file is located. \n\nHold shift as you right click on the file, and then select from the menu that pops up \'copy as path\'. That copies the path to your clipboard. Paste that value into this text box, and remove the quotation marks.')">?</button>
       </span>
