changed tile from flask bucketlist

--- a/templates/index_new.html
+++ b/templates/index_new.html
@@ -2,7 +2,7 @@
 <html lang="en">
  
 	<head>
-	  <title>Python Flask Bucket List App</title>
+	  <title>Isobaric Data Extractor Assistant </title>
 	  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='bootstrap.min.css') }}">
 	  <script src="{{ url_for('static', filename='jquery.js') }}"> </script>
 	  <script src="{{ url_for('static', filename='async.js') }}"> </script>
