switching over to ptgnd next

--- a/templates/index_new.html
+++ b/templates/index_new.html
@@ -13,11 +13,11 @@
 	    <div class="container-fluid">
 	      <ul class="nav navbar-nav">
 	        <!-- <li class="active" name="tab_link" id="tab_1"><a href="#">First Link</a></li> -->
-	        <li name="tab_link" id="tab_2" class="active"><a href="#">SELECT MGF</a></li>
+	        <li name="tab_link" id="tab_2" class="active"><a href="#">SELECT SPECTRA</a></li>
 	        <!-- <li name="tab_link" id="tab_3"><a href="#">PARSE XML</a></li>
 	        <li name="tab_link" id="tab_4" class="active" ><a href="#">COMBINE MGF AND XML</a></li> -->
 	        <li name="tab_link" id="tab_2">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</li>
-	        <li name="tab_link" class="active" id="tab_5"><a href="#">PARSE XML</a></li>
+	        <li name="tab_link" class="active" id="tab_5"><a href="#">WRITE PEPTIDES AND REPORTERS</a></li>
 	      </ul>
 	    </div>
 	  </nav>
