--- a/templates/tab_5.html
+++ b/templates/tab_5.html
@@ -116,7 +116,7 @@
       </select>
     </div>
     <div class="input-group" style="margin: 1%">
-      <span class="input-group-addon" id="basic-addon1">Include spectra peptide expectation &ge </span>
+      <span class="input-group-addon" id="basic-addon1">Include spectra peptide expectation &#8804 </span>
       <input type="text" class="form-control" id="logErrorThreshold" value="0.1">
       <span class="input-group-btn">
         <button class="btn btn-info" onclick="alert('GPM outputs an match probability for each spectra. This filters out spectra with higher error than the value given. Must be a number between 0 and 1, written in either decimal form or scientific notation (1.3e-5)')">?</button>
