stop checking after max

--- a/templates/tab_5.html
+++ b/templates/tab_5.html
@@ -129,7 +129,7 @@
         <option value="1">DO NOT assign unacceptable modifications</option>
       </select>
       <span class="input-group-btn">
-        <button class="btn btn-info" onclick="alert('Dunno what to say, that\'s for you dad')">?</button>
+        <button class="btn btn-info" onclick="alert('Fill this in later')">?</button>
       </span>
     </div>
     <div id="options_if_choosing_unacceptable_mods">
