working on the posting side of the inverse function. just got json posting to work

--- a/templates/tab_1.html
+++ b/templates/tab_1.html
@@ -87,8 +87,7 @@
 
     <br>
     <button id="tab_1_button" class="btn btn-primary">Click to submit</button>
-<!--     <button id='testing_button' class="btn btn-primary">Test form serialization</button>
- -->  </div>
+  </div>
   <div style="float:right;width:30%;height:88vh;border-style:solid;border-width:5px;overflow:scroll;padding:10px" id="rightSide">
     <h1>Progress</h1>
     <ul>
