--- a/templates/tab_3.html
+++ b/templates/tab_3.html
@@ -63,15 +63,15 @@
             <tbody>
               <tr>
                 <th>TMT-126</th>
-                <td><input type="text" class="form-control" id="126_NA" value="0.0"></td>
-                <td><input type="text" class="form-control" id="126_NA" value="0.0"></td>
+                <td><input type="text" class="form-control" id="126_NA1" value="0.0"></td>
+                <td><input type="text" class="form-control" id="126_NA2" value="0.0"></td>
                 <td><b>100</b></td>
                 <td><input type="text" class="form-control" id="126_127C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="126_128C" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-127N</th>
-                <td><input type="text" class="form-control" id="127N_NA" value="0.0"></td>
+                <td><input type="text" class="form-control" id="127N_NA1" value="0.0"></td>
                 <td><input type="text" class="form-control" id="127N_126" value="0.0"></td>
                 <td><b>100</b></td>
                 <td><input type="text" class="form-control" id="127N_128N" value="0.0"></td>
@@ -79,7 +79,7 @@
               </tr>
               <tr>
                 <th>TMT-127C</th>
-                <td><input type="text" class="form-control" id="127C_NA" value="0.0"></td>
+                <td><input type="text" class="form-control" id="127C_NA1" value="0.0"></td>
                 <td><input type="text" class="form-control" id="127C_126" value="0.0"></td>
                 <td><b>100</b></td>
                 <td><input type="text" class="form-control" id="127C_128C" value="0.0"></td>
@@ -87,7 +87,7 @@
               </tr>
               <tr>
                 <th>TMT-128N</th>
-                <td><input type="text" class="form-control" id="128N_NA" value="0.0"></td>
+                <td><input type="text" class="form-control" id="128N_NA1" value="0.0"></td>
                 <td><input type="text" class="form-control" id="128N_127N" value="0.0"></td>
                 <td><b>100</b></td>
                 <td><input type="text" class="form-control" id="128N_129N" value="0.0"></td>
@@ -115,7 +115,7 @@
                 <td><input type="text" class="form-control" id="129C_128C" value="0.0"></td>
                 <td><b>100</b></td>
                 <td><input type="text" class="form-control" id="129C_130C" value="0.0"></td>
-                <td><input type="text" class="form-control" id="129C_NA" value="0.0"></td>
+                <td><input type="text" class="form-control" id="129C_NA1" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-130N</th>
@@ -123,15 +123,15 @@
                 <td><input type="text" class="form-control" id="130N_129N" value="0.0"></td>
                 <td><b>100</b></td>
                 <td><input type="text" class="form-control" id="130N_131" value="0.0"></td>
-                <td><input type="text" class="form-control" id="130N_NA" value="0.0"></td>
+                <td><input type="text" class="form-control" id="130N_NA1" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-130C</th>
                 <td><input type="text" class="form-control" id="130C_128C" value="0.0"></td>
                 <td><input type="text" class="form-control" id="130C_129C" value="0.0"></td>
                 <td><b>100</b></td>
-                <td><input type="text" class="form-control" id="130C_NA" value="0.0"></td>
-                <td><input type="text" class="form-control" id="130C_NA" value="0.0"></td>
+                <td><input type="text" class="form-control" id="130C_NA1" value="0.0"></td>
+                <td><input type="text" class="form-control" id="130C_NA2" value="0.0"></td>
               </tr>
               <tr>
                 <th>TMT-131</th>
@@ -155,92 +155,7 @@
           OPTION SEVEN!
       </div>
     </span>
-
-    <!-- <h2 style="margin:1%">SELECT FROM ALL MGF FILES IN FOLDER</h2>
-
-
-    <div class="input-group" style="margin: 1%">
-      <span class="input-group-addon" id="basic-addon1">Operation to perform</span>
-      <select class='form-control' id="mgfOperationToPerform">
-        <option value="0">Only Extract reporter ion intensities (creates .reporter files)</option>
-        <option value="1">Extract reporter ion intensities AND select viable spectra (creates .reporter AND new .mgf files)</option>
-      </select>
-      <span class="input-group-btn">
-        <button class="btn btn-info" onclick="alert('Selecting viable spectra creates a series of mgf files filtered by whether a given run meet your minimum intensity and reporter count criteria. ')">?</button>
-      </span>
-    </div>
-
-    <div class="input-group" style="margin: 1%">
-      <span class="input-group-addon" id="basic-addon1">FULL PATH to MGF DIRECTORY</span>
-      <input type="text" class="form-control" id="mgfReadDirPath">
-      <span class="input-group-btn">
-        <button class="btn btn-info" onclick="alert('On windows, open windows explorer and navigate to your mgf directory. Clicking on its url bar, to the right of the folder names, will highlight the directory path. Copy paste that into this text box')">?</button>
-      </span>
-
-    </div>
-    <div class="input-group" style="margin: 1%">
-      <span class="input-group-addon" id="basic-addon1">REPORTER ION TYPE</span>
-      <select class='form-control' id="reporterIonType">
-        {% if inverse_files %}
-          {% for f in inverse_files %}
-            <option value={{f.rpartition('-inv.txt')[0]}}>{{f.rpartition('-inv.txt')[0]}}</option>
-          {% endfor %}
-        {% endif %}
-      </select>
-    </div>
-    <div class="input-group" style="margin: 1%">
-      <span class="input-group-addon" id="basic-addon1">Minimum Intensity per reporter</span>
-      <input type="text" class="form-control" id="minIntensity" value="1000">
-      <span class="input-group-btn">
-        <button class="btn btn-info" onclick="alert('Part of the filtering process. For a reporter ion to be considered present in a given run, it must appear in total this many times')">?</button>
-      </span>
-    </div>
-    <div class="input-group" style="margin: 1%">
-      <span class="input-group-addon" id="basic-addon1">Minimum number of Reporters with said intensity</span>
-      <input type="text" onkeypress='return event.charCode >= 48 && event.charCode <= 57' class="form-control" id="minReporters" value="2">
-      <span class="input-group-btn">
-        <button class="btn btn-info" onclick="alert('Part of the filtering process. For a run to be selected as valid, this many runs must appear with at least the prescribed intensity')">?</button>
-      </span>
-
-    </div>
-    <br>
-    <div class="input-group" style="margin: 1%">
-      <span class="input-group-addon" id="basic-addon1">Perform largest-reporter recalibration</span>
-      <select class='form-control' id="performRecalibration">
-        <option value="1">Perform recalibration</option>
-        <option value="0">DO NOT Perform recalibration</option>
-      </select>
-    </div>
-
-    <div id="options_if_recalibrating">
-      <div class="input-group" style="margin: 1%">
-        <span class="input-group-addon" id="basic-addon1">&nbspm/z error to select maximum reporter for recalibration (ppm) &nbsp</span>
-        <input type="text" class="form-control" id="mzErrorInitialRun" value="20">
-        <span class="input-group-btn">
-          <button class="btn btn-info" onclick="alert('Error used to categorize spectral peaks in order to scale reporter ion target-masses to more accurate values. \n\nThe units of this number are millionths of a percent away from target mass. So, inputting 20 would mean that, for a reporter ion with m/z=100, anything with m/z between 99.998 and 100.002 would be classified as that ion')">?</button>
-        </span>
-      </div>
-
-      <div class="input-group" style="margin: 1%">
-        <span class="input-group-addon" id="basic-addon1">&nbsp m/z error to select recalibrated data (ppm, must be smaller than initial m/z error) &nbsp</span>
-        <input type="text" class="form-control" id="mzErrorRecalibration" value="5">
-        <span class="input-group-btn">
-          <button class="btn btn-info" onclick="alert('Error used to categorize spectral peaks AFTER reporter ion masses have been recalibrated. \n\nThe units of this number are millionths of a percent away from target mass. So, inputting 5 would mean that, for a reporter ion with recalibrated m/z=100, anything with m/z between 99.9995 and 100.0005 would be classified as that ion')">?</button>
-        </span>
-      </div>
-    </div>
-    <div id="options_if_not_recalibrating" style="display: none">
-      <div class="input-group" style="margin: 1%">
-        <span class="input-group-addon" id="basic-addon1">&nbspmz_error (ppm) &nbsp</span>
-        <input type="text" class="form-control" id="mzError" value="20">
-        <span class="input-group-btn">
-          <button class="btn btn-info" onclick="alert('Error used to categorize spectral peaks, based on hard-coded reporter ion masses. \n\nThe units of this number are millionths of a percent away from target mass. So, inputting 20 would mean that, for a reporter ion with recalibrated m/z=100, anything with m/z between 99.998 and 100.002 would be classified as that ion')">?</button>
-        </span>
-      </div>
-    </div>
-
-    <br>
-    <button id="tab_3_button" class="btn btn-primary">Click to submit</button> -->
+    <button id="tab_3_button" class="btn btn-primary">Create Inverse File</button>
   </div>
   <!-- <div style="float:right;width:30%;height:88vh;border-style:solid;border-width:5px;overflow:scroll;padding:10px" id="rightSide">
     <h1>Progress</h1>
@@ -286,10 +201,96 @@
   </script>
 
   <script>
+
   $('#tab_3_button').click(function(e){
     console.log("clicked");
     $(this).attr('disabled', true);
-    $(this).text("Processing ... ")
+    $(this).text("Processing ... ");
+
+
+    var that = $(this);
+    var leftSide = that.parent();
+    var reporterType = $('div[id="tab_3"]').find('#reporterIonType');
+    console.log(reporterType.val());
+    var qs = "#" + reporterType.val() + ", .input_group"
+    console.log(qs);
+    var formSection = leftSide.find(qs);
+    // console.log(formSection);
+    var inputs = formSection.find('input');
+    var serializedFormSection = serializeForm(inputs);
+    console.log(serializedFormSection);
+    var transformed = {};
+    var broken = false;
+    _.each(_.keys(serializedFormSection), function(key){
+      if (broken){
+        return;
+      }
+      var value = serializedFormSection[key];
+      if (isNaN(value)){
+        broken=true;
+        alert("invalid input. Must be numeric. For " + key);
+      }
+      value = parseFloat(value);
+      if (value < 0.0) {
+        broken=true;
+        alert("invalid input. Must be positive. For " + key);
+      }
+      var parts = key.split('_');
+      var row = parts[0];
+      var column = parts[1];
+      console.log(column);
+      // console.log(parts[0]);
+      // console.log(parts[1]);
+      if (!transformed[row]){
+        transformed[row]={};
+      }
+      if (column.startsWith("NA")){
+        if(!transformed[row]['other']){
+          transformed[row]['other'] = 0.0;
+        }
+        transformed[row]['other'] += value;
+      }
+      else {
+        transformed[row][column] = value;
+      }
+      return;
+    });
+
+    if (broken){
+      that.text('Create Inverse File');
+      $(this).attr('disabled', false);
+      return;
+    }
+    var stringDataToSend = JSON.stringify({
+      reporterType : reporterType.val(),
+      data : transformed
+    })
+    console.log(stringDataToSend);
+    console.log(transformed);
+    $.ajax({
+      type : "POST",
+      url : "createInverseFiles",
+      contentType: 'application/json; charset=utf-8',
+      data: stringDataToSend,
+      success : function(result){
+        console.log("good job friend!");
+        console.log(result);
+      },
+      error : function(response, textStatus, HTTPError){
+        console.log('error creating inverse');
+        console.log(response.responseText);
+      }
+    });
+
+
+
+    that.text('Create Inverse File');
+    $(this).attr('disabled', false);
+
+
+
+    return;
+    var reporterType = $('div[id="tab_3"]').find('#reporterIonType');
     var that = $(this);
     var leftSide = that.parent();
     var inputs = leftSide.find('input, select');
