--- a/templates/tab_2.html
+++ b/templates/tab_2.html
@@ -62,7 +62,7 @@
       </div>
       <div id="options_if_not_recalibrating" style="display: none">
         <div class="input-group" style="margin: 1%">
-          <span class="input-group-addon" id="basic-addon1">&nbspmz_error (ppm, integer) &nbsp</span>
+          <span class="input-group-addon" id="basic-addon1">&nbsp m/z error (ppm, integer) &nbsp</span>
           <input type="text" class="form-control" id="mzError" value="20">
           <span class="input-group-btn">
             <button class="btn btn-info" onclick="alert('Error used to categorize spectral peaks, based on hard-coded reporter ion masses. \n\nThe units of this number are millionths of a percent away from target mass. So, inputting 20 would mean that, for a reporter ion with recalibrated m/z=100, anything with m/z between 99.998 and 100.002 would be classified as that ion')">?</button>
